cmake_minimum_required(VERSION 3.16)
project(DynamicArray C)

set(CMAKE_EXPORT_COMPILE_COMMANDS)
set(CMAKE_C_STANDARD 11)
enable_testing()

add_executable(tests tests.c da_tests.c)

add_test(test_create ./tests test_create)
add_test(test_destroy ./tests test_destroy)
add_test(test_clear ./tests test_clear)
add_test(test_get_char_at ./tests test_get_char_at)
add_test(test_set_char_at ./tests test_set_char_at)
add_test(test_equal ./tests test_equal)
add_test(test_is_first ./tests test_is_first)
add_test(test_append_char ./tests test_append_char)
add_test(test_append_string ./tests test_append_string)
add_test(test_remove_char_at ./tests test_remove_char_at)
add_test(test_remove_string_at ./tests test_remove_string_at)
add_test(test_substring ./tests test_substring)
add_test(test_chop_first ./tests test_chop_first)
add_test(test_chop_last ./tests test_chop_last)
add_test(test_chop_right ./tests test_chop_right)
add_test(test_chop_left ./tests test_chop_left)
add_test(test_chop_by_delim ./tests test_chop_by_delim)